# ragu

./: .gitignore  Procfile  README.md  environment.yml  pyproject.toml  requirements.txt
rag_builder/: app.css  app.py  assistant.py  test.py
rag_builder/commons/: page.py  utils.py
rag_builder/prompts/: rag.txt
ragu/: app.css  app.py  assistant.py
ragu/commons/: utils.py
