[tool.poetry]
name = "rag-builder"
version = "0.1.0"
description = ""
authors = ["Tommy Xu <tommysteryy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.1"
python-dotenv = "^1.0.0"
pypdf = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
